@@ -534,6 +534,8 @@ public interface SmFptrConst {
     public static final int SMFPTR_DIO_PARAM_TAX_VALUE_5   = 15;
     public static final int SMFPTR_DIO_PARAM_TAX_SYSTEM    = 16;
     public static final int SMFPTR_DIO_PARAM_ITEM_TOTAL_AMOUNT = 17;
+    public static final int SMFPTR_DIO_PARAM_ITEM_PAYMENT_TYPE = 18;
+    public static final int SMFPTR_DIO_PARAM_ITEM_SUBJECT_TYPE = 19;
 
     // ///////////////////////////////////////////////////////////////////
     // TableMode
